--- a/ProductDetails.html
+++ b/ProductDetails.html
@@ -8,7 +8,8 @@
         content="Discover premium fashion for men and women at Royce Threads. Shop stylish clothing for all occasions.">
     <meta name="keywords" content="clothes, men, women, fashion, Royce Threads, trendy, modern, apparel">
     <meta name="author" content="Royce Threads">
-    <link rel="icon" href="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" type="image/x-icon">
+    <link rel="icon" href="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png"
+        type="image/x-icon">
     <!-- css -->
     <link rel="stylesheet" href="Style/productDetails.css">
     <link rel="stylesheet" href="Style/main.css">
@@ -35,8 +36,7 @@
                 <a href="https://www.instagram.com/roycethreads/" target="_blank">
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
-                <a href="https://www.facebook.com/profile.php?id=61578304153670"
-                    target="_blank">
+                <a href="https://www.facebook.com/profile.php?id=61578304153670" target="_blank">
                     <ion-icon name="logo-facebook"></ion-icon>
                 </a>
                 <a href="https://wa.me/923326704607?text=Hello%2C%20I%E2%80%99m%20interested%20in%20learning%20more%20about%20your%20products.%20Please%20share%20the%20details%20when%20convenient.%20Thank%20you.
@@ -44,7 +44,8 @@
                     <ion-icon name="logo-whatsapp"></ion-icon>
                 </a>
             </div>
-            <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="page logo" id="logo">
+            <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="page logo"
+                id="logo">
             <div class="header_actions">
                 <div id="display_login">
                     <!-- <span id="user_name">Welcome</span> -->
@@ -84,6 +85,14 @@
                     <h3 class="product_price"></h3>
                     <p id="stock_status" class="stock_status"></p>
                     <p class="product_des"></p>
+
+                    <!-- Size selector -->
+                    <label for="size_select">Select Size:</label>
+                    <select id="size_select" required>
+                        <option value="" disabled selected>Select a size</option>
+                        <!-- Sizes will be populated via JS -->
+                    </select>
+
                     <div class="buttons">
                         <div class="counts">
                             <button id="minus" class="counts_btns">-</button>
@@ -93,8 +102,8 @@
                         </div>
                         <button id="btn_add">Add To Cart</button>
                     </div>
-
                 </div>
+
             </div>
         </div>
     </main>
@@ -128,7 +137,8 @@
     <footer class="footer">
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="logo" width="140">
+                <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="logo"
+                    width="140">
                 <p>Style begins with you — our collections are designed with your life in mind.</p>
             </div>
             <div class="footer-list">
