--- a/checkout.html
+++ b/checkout.html
@@ -239,6 +239,7 @@
       <div class="checkout-summary-box">
         <p>Product Total: <strong id="productTotal">PKR 0</strong></p>
         <p>Delivery Fee: <strong id="deliveryFee">PKR 300</strong></p>
+         <p>Discount: <strong id="discountAmount">PKR 0</strong></p>
         <p>Total Charges: <strong id="finalTotal">PKR 0</strong></p>
       </div>
 
