--- a/cartPage.html
+++ b/cartPage.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description"
+    <meta name="description"
         content="Discover premium fashion for men and women at Royce Threads. Shop stylish clothing for all occasions.">
     <meta name="keywords" content="clothes, men, women, fashion, Royce Threads, trendy, modern, apparel">
     <meta name="author" content="Royce Threads">
-    <link rel="icon" href="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" type="image/x-icon">
+    <link rel="icon" href="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png"
+        type="image/x-icon">
     <!-- css -->
-   
+
     <link rel="stylesheet" href="Style/cartPage.css">
     <link rel="stylesheet" href="Style/main.css">
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <!-- icon -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Royce Threads</title>
 </head>
+
 <body>
     <header class="container" id="header">
         <div class="header_top">
-              <div class="header_social">
-                <a href="https://www.instagram.com/roycethreads?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+            <div class="header_social">
+                <a href="https://www.instagram.com/roycethreads?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                    target="_blank">
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=61578304153670" target="_blank">
@@ -35,23 +41,24 @@
 " target="_blank">
                     <ion-icon name="logo-whatsapp"></ion-icon>
                 </a>
-              </div>
-              <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="page logo" id="logo">
-              <div class="header_actions">
+            </div>
+            <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="page logo"
+                id="logo">
+            <div class="header_actions">
                 <div id="display_login">
-                  <span id="user_name">Amira</span>
-                  <a href="#" id="logout" title="Logout" onclick="logout();">
-                   <ion-icon name="log-out-outline"></ion-icon>
-                  </a>
+                    <span id="user_name">Amira</span>
+                    <a href="#" id="logout" title="Logout" onclick="logout();">
+                        <ion-icon name="log-out-outline"></ion-icon>
+                    </a>
                 </div>
                 <a href="login.html" title="Login" id="login_btn">
-                 <ion-icon name="person-circle-outline"></ion-icon>
+                    <ion-icon name="person-circle-outline"></ion-icon>
                 </a>
                 <a href="#" class="icon-cart">
-                  <ion-icon name="cart-outline"></ion-icon>
-                  <span id="cart-counter">0</span>
+                    <ion-icon name="cart-outline"></ion-icon>
+                    <span id="cart-counter">0</span>
                 </a>
-           </div>
+            </div>
         </div>
         <nav>
             <menu>
@@ -66,35 +73,39 @@
     <main class="cart_page">
         <div class="container">
             <h1>Shopping Bag</h1>
-             <div class="content">
+            <div class="content">
                 <div class="left_side_cart">
                     <div class="cart_title">
-                      <h2>My shopping bag <span id="cart_counts"></span></h2>
+                        <h2>My shopping bag <span id="cart_counts"></span></h2>
                     </div>
                     <div class="cart_products">
-                      <!-- add cart products in js -->
+                        <!-- add cart products in js -->
                     </div>
-                 </div>
-                 <div class="right_side_cart">
+                </div>
+                <div class="right_side_cart">
                     <div class="Promotional_code">
                         <h2>
                             Do you have a Promotional Code?
                         </h2>
                         <div class="apply_code">
                             <input type="text" id="code" placeholder="Promo code">
-                            <button >Done</button>
+                            <button>Done</button>
                         </div>
                     </div>
                     <div class="summary">
                         <h2>Order Summary</h2>
                         <div class="summary_price">
-                            <div> 
+                            <div>
                                 <h4>Subtotal</h4>
                                 <span id="Subtotal"></span>
                             </div>
                             <div class="Delivery">
                                 <h4>Delivery</h4>
-                                <span id="Delivery">$70.00</span>
+                                <span id="Delivery">Rs. 300.00</span>
+                            </div>
+                            <div>
+                                <h4>Discount</h4>
+                                <span id="Discount">Rs. 0.00</span>
                             </div>
                             <div>
                                 <h4>Total Order</h4>
@@ -103,11 +114,11 @@
                         </div>
                         <button class="checkout" onclick="checkOut();">Check Out</button>
                     </div>
-                 </div>
-             </div>
+                </div>
+            </div>
         </div>
     </main>
-   
+
     <!-- cart -->
     <div class="cart-section">
         <div class="cart-header">
@@ -117,7 +128,7 @@
             </div>
         </div>
         <div class="cart_products">
-         <!-- add cart products in js -->
+            <!-- add cart products in js -->
         </div>
         <div class="cart_total">
             <h3>Total:</h3>
@@ -130,40 +141,42 @@
     </div>
     <footer class="footer black-footer">
         <div class="footer-top">
-           <div class="footer-logo">
-               <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="logo" width="140">
-               <p>Style begins with you — our collections are designed with your life in mind.</p>
-           </div>
-           <div class="footer-list">
-               <div class="list">
-                   <h4>SHOPPING</h4>
-                   <ul>
+            <div class="footer-logo">
+                <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="logo"
+                    width="140">
+                <p>Style begins with you — our collections are designed with your life in mind.</p>
+            </div>
+            <div class="footer-list">
+                <div class="list">
+                    <h4>SHOPPING</h4>
+                    <ul>
                         <li><a href="#">Men's Clothing</a></li>
                         <li><a href="#">Women's Clothing</a></li>
                         <li><a href="#">Seasonal Picks</a></li>
                         <li><a href="#">On Sale</a></li>
                     </ul>
-               </div>
-               <div class="list">
-                   <h4>Customer Services</h4>
-                   <ul>
-                       <li><a href="info.html">Contact Us</a></li>
-                       <li><a href="info.html">Payment Methods</a></li>
-                       <li><a href="info.html">Delivery</a></li>
-                       <li><a href="info.html">Return & Exchanges</a></li>
-                   </ul>
-               </div>
-   
-           </div>
+                </div>
+                <div class="list">
+                    <h4>Customer Services</h4>
+                    <ul>
+                        <li><a href="info.html">Contact Us</a></li>
+                        <li><a href="info.html">Payment Methods</a></li>
+                        <li><a href="info.html">Delivery</a></li>
+                        <li><a href="info.html">Return & Exchanges</a></li>
+                    </ul>
+                </div>
+
+            </div>
         </div>
-       <div class="footer-bottom">
-           <p class="footer-company-name">
-              © 2025 Royce Threads. All Rights Reserved.
-           </p>
-       </div>
+        <div class="footer-bottom">
+            <p class="footer-company-name">
+                © 2025 Royce Threads. All Rights Reserved.
+            </p>
+        </div>
     </footer>
     <button id="scrollBtn"><ion-icon name="arrow-up-outline" id="btn-up"></ion-icon></button>
     <script src="JavaScript/main.js"></script>
     <script src="JavaScript/cart.js"></script>
 </body>
+
 </html>
