--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308746/logo_qfevxj.png" alt="page logo" id="logo">
             <div class="header_actions">
                 <div id="display_login">
-                    <span id="user_name">Amira</span>
+                    <span id="user_name">Royce</span>
                     <a href="#" id="logout" title="Logout" onclick="logout();">
                         <ion-icon name="log-out-outline"></ion-icon>
                     </a>
