--- a/checkout.html
+++ b/checkout.html
@@ -245,7 +245,7 @@
 
 
       <!-- Submit -->
-      <button type="submit" class="submit-button">Pay Now</button>
+      <button type="submit" class="submit-button">Confirm Order</button>
     </form>
   </main>
 
