--- a/ProductDetails.html
+++ b/ProductDetails.html
@@ -197,12 +197,12 @@
                 <!-- Women Charts -->
                 <div class="chart-section women-shirt">
                     <h3>Women's Shirt Size Chart</h3>
-                    <img src="images/womens-shirt-size-chart.png" alt="Women's Shirt Size Chart">
+                    <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1754763820/Oversized_Tshirts_Size_Guide_bkayn5.jpg" alt="Women's Shirt Size Chart">
                 </div>
 
                 <div class="chart-section women-pants">
                     <h3>Women's Pants Size Chart</h3>
-                    <img src="images/womens-pants-size-chart.png" alt="Women's Pants Size Chart">
+                    <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1754764455/Screenshot_2025-08-09_113227_ce67gn.png" alt="Women's Pants Size Chart">
                 </div>
             </div>
         </div>
