Updated file with new changes

--- a/ProductDetails.html
+++ b/ProductDetails.html
@@ -185,13 +185,13 @@
         
         <div class="size-charts">
             <div class="chart-section">
-                <h3>Men Size Chart</h3>
+                <h3>Men T-Shirts Size Chart</h3>
                 <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1754763820/Oversized_Tshirts_Size_Guide_bkayn5.jpg" alt="Shirt Size Chart">
             </div>
             <div class="chart-section">
-                <h3>Women Size Chart</h3>
+                <h3>Men Jeans Size Chart</h3>
                 <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1754764455/Screenshot_2025-08-09_113227_ce67gn.png" alt="Men's Pants Size Chart">
-                </div>" alt="Pants Size Chart">
+
             </div>
         </div>
     </div>
