Updated file with new changes

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
         <div class="slides">
             <div class="slide">
                 <div class="slide-content">
-                    <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308055/background3_rwv0zf.webp ">
+                    <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1754772808/slide16_bdfdea89-9df3-48da-9f0a-888fd50a83d5_jv5mrq.jpg">
                     <div class="text">
                         <h2>Wear Your Vibe.</h2>
                         <a href="products.html" class="shop-btn">Shop Now</a>
                     </div>
                 </div>
                 <div class="slide-content">
-                    <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308143/slide16_bdfdea89-9df3-48da-9f0a-888fd50a83d5_jv5mrq.webp ">
+                    <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1754772773/background3_rwv0zf.jpg">
                     <div class="text">
                         <h2> Premium Looks, Great Prices!</h2>
                         <a href="products.html" class="shop-btn">Shop Now</a>
