Updated file with new changes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="slide-content">
-                    <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1753308027/background2_jvmyto.webp ">
+                    <img src="https://res.cloudinary.com/dysfwxbhk/image/upload/v1754772649/background2_jvmyto.jpg">
                     <div class="text">
                         <h2>Free Delivery Over PKR 3000!</h2>
                         <a href="products.html" class="shop-btn">Shop Now</a>
